--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,9 +2,9 @@ name: ci-test
 
 on:
   push:
-    branches: [ develop, main ]
+    branches: [ develop, main, v2 ]
   pull_request:
-    branches: [ develop, main ]
+    branches: [ develop, main, v2 ]
 
 jobs:
 
